# WorkingTitle4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  book.md.html  notes.md  watch.ps1
assets/: gi_test_3.grup  gi_test_3.t06
deprecated_src/: loading_dynamic.cxx  loading_dynamic.hxx
deprecated_src/grup/: group.hxx
deprecated_src/grup/group/: add_item.cxx  load.cxx  save.cxx
deprecated_src/grup/mesh/: common.cxx  common.hxx  deref.cxx  load.hxx
deprecated_src/grup/texture/: load.cxx
notes/: backlog.md  current.md  gi_attention.md  global_illumination.md  intermittent.md  long_term.md  medium_term.md  needs_research.md  next_round.md  perf_tools.md  plan.md  refactoring.md  short_term.md  stream_plan.md
src/: embedded.hxx  global.hxx
src/art/: test.cxx
src/engine/: blas_storage.hxx  component.hxx  constants.hxx  example.hxx  helpers.cxx  helpers.hxx  image_formats.hxx  main.cxx  mesh.cxx  mesh.hxx  misc.hxx  rendering.hxx  session.hxx  startup.cxx  startup.hxx  texture.cxx  texture.hxx  uploader.cxx  uploader.data.hxx  uploader.hxx
src/engine/blas_storage/: create.cxx  data.hxx  deinit.cxx  destroy.cxx  get_address.cxx  id.hxx  init.cxx
src/engine/common/: after_inflight.cxx  after_inflight.hxx  mesh.hxx  shared_descriptor_pool.hxx  t06.cxx  t06.hxx  texture.hxx  ubo.hxx
src/engine/component/: artline_model.hxx  base_transform.hxx  ode_body.hxx
src/engine/datum/: probe_attention.hxx  probe_confidence.hxx  probe_irradiance.hxx  probe_offsets.hxx  probe_radiance.hxx  probe_workset.hxx
src/engine/display/: cleanup.cxx  cleanup.hxx  data.hxx  setup.cxx  setup.hxx
src/engine/frame/: acquire.cxx  acquire.hxx  cleanup.cxx  cleanup.hxx  compose_render.cxx  compose_render.hxx  compose_submit.cxx  compose_submit.hxx  generate_render_list.cxx  generate_render_list.hxx  graphics_render.cxx  graphics_render.hxx  graphics_submit.cxx  graphics_submit.hxx  handle_window_events.cxx  handle_window_events.hxx  imgui_new_frame.cxx  imgui_new_frame.hxx  imgui_populate.cxx  imgui_populate.hxx  imgui_render.cxx  imgui_render.hxx  imgui_submit.cxx  imgui_submit.hxx  loading_dynamic.cxx  loading_dynamic.hxx  prepare_uniforms.cxx  prepare_uniforms.hxx  present.cxx  present.hxx  readback.cxx  readback.hxx  reset_pools.cxx  reset_pools.hxx  schedule_all.cxx  schedule_all.hxx  setup_gpu_signal.cxx  setup_gpu_signal.hxx  update.cxx  update.hxx  (+2 more)
src/engine/loading/: group.cxx  group.hxx  mesh.cxx  mesh.hxx  simple.cxx  simple.hxx  texture.cxx  texture.hxx
src/engine/rendering/: common.cxx  common.hxx  finalpass.cxx  finalpass.hxx  gpass.cxx  gpass.hxx  image_formats.hxx  lpass.cxx  lpass.hxx  prepass.cxx  prepass.hxx
src/engine/session/: cleanup.cxx  cleanup.hxx  data.hxx  iteration.cxx  iteration.hxx  public.hxx  setup.cxx  setup.hxx  setup_cleanup.cxx  setup_cleanup.hxx  try_rendering.cxx  try_rendering.hxx  vulkan.data.hxx
src/engine/step/: indirect_light.hxx  probe_appoint.hxx  probe_collect.hxx  probe_measure.hxx
src/engine/tools/: cube_writer.cxx  cube_writer.hxx  gltf_converter.cxx  gltf_converter.hxx  voxel_converter.cxx  voxel_converter.hxx
src/exe/: cubewriter.cxx  engine.cxx  engine2.cxx  scripting.inline.hxx  taskmark.cxx  test.cxx  voxelconverter.cxx
src/exe/scripts/: common.inline.hxx  default.cxx  session.inline.hxx  sponza.cxx
src/impl/: global_overload.cxx  log.cxx  qef.cxx
src/lib/: array.cxx  array.hxx  array.inline.hxx  base.hxx  cstr.cxx  cstr.hxx  debug_camera.cxx  debug_camera.hxx  defer.cxx  defer.hxx  easy_allocator.cxx  easy_allocator.hxx  flat32.hxx  gpu_signal.cxx  gpu_signal.hxx  guid.cxx  guid.hxx  hash64.cxx  hash64.hxx  io.cxx  io.hxx  lifetime.cxx  lifetime.hxx  main_thread.cxx  main_thread.hxx  mkdir_p.cxx  mkdir_p.hxx  mutex.hxx  mutex.windows.cxx  single_allocator.cxx  single_allocator.hxx  task.cxx  task.hxx  task.inline.hxx  u64_table.hxx  usage.hxx  virtual_memory.hxx  virtual_memory.windows.cxx
src/lib/_base/: allocator.cxx  allocator.hxx  array.hxx  array.inline.hxx  common.hxx  memory_range.hxx
src/lib/_experiment/: big_array.cxx  big_array.hxx  big_array.inline.hxx
src/lib/gfx/: allocator.cxx  allocator.hxx  command_pool_2.cxx  command_pool_2.hxx  marching_cubes.cxx  marching_cubes.hxx  mesh.hxx  multi_alloc.cxx  multi_alloc.hxx  texture.hxx  utilities.cxx  utilities.hxx
src/shader/: directional_light_secondary.frag.glsl  example_rs.frag.glsl  example_rs.vert.glsl  finalpass.comp.glsl  frame.glsl  gpass.frag.glsl  gpass.vert.glsl  indirect_light.frag.glsl  indirect_light_secondary.frag.glsl  lpass_sun.frag.glsl  lpass_sun.vert.glsl  probe_appoint.comp.glsl  probe_collect.comp.glsl  probe_depth_update.comp.glsl  probe_light_update.comp.glsl  probe_maps_update.comp.glsl  probe_measure.comp.glsl  secondary_geometry.comp.glsl  sky.glsl
src/shader/common/: constants.glsl  frame.glsl  helpers.glsl  light_model.glsl  probes.glsl  sky.glsl
src/task/: after_inflight.cxx  after_inflight.hxx  defer.cxx  defer.hxx  frame_acquire.cxx  frame_acquire.hxx  frame_cleanup.cxx  frame_cleanup.hxx  frame_compose_render.cxx  frame_compose_render.hxx  frame_compose_submit.cxx  frame_compose_submit.hxx  frame_generate_render_list.cxx  frame_generate_render_list.hxx  frame_graphics_render.cxx  frame_graphics_render.hxx  frame_graphics_submit.cxx  frame_graphics_submit.hxx  frame_handle_window_events.cxx  frame_handle_window_events.hxx  frame_imgui_new_frame.cxx  frame_imgui_new_frame.hxx  frame_imgui_populate.cxx  frame_imgui_populate.hxx  frame_imgui_render.cxx  frame_imgui_render.hxx  frame_imgui_submit.cxx  frame_imgui_submit.hxx  frame_loading_dynamic.cxx  frame_loading_dynamic.hxx  frame_prepare_uniforms.cxx  frame_prepare_uniforms.hxx  frame_present.cxx  frame_present.hxx  frame_reset_pools.cxx  frame_reset_pools.hxx  frame_setup_gpu_signal.cxx  frame_setup_gpu_signal.hxx  frame_update.cxx  frame_update.hxx  (+35 more)
src/tools/: console.cxx  console.hxx  cube_writer.cxx  cube_writer.hxx  gltf_converter.cxx  gltf_converter.hxx  voxel_converter.cxx  voxel_converter.hxx
src/tools/common/: mesh.cxx  mesh.hxx
(+288 files in other folders)
